2011-01-27  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-draft.el (gnus-draft-clear-marks): New function to be run as an
	exit hook to nix out all data on readedness on group exit.

	* gnus-util.el (float-time): If float-time is bound, always use it on
	all Emacsen.  It's unclear why the subrp check was there.
	(time-date): Require to make some autoload issues on XEmacs go away.

	* shr.el (shr-put-color): Don't do the box padding in tables, since
	they're already padded.

2011-01-26  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-art.el (gnus-article-next-page): When the last line of the
	article is displayed, scroll down once more instead of going to the
	next article at once.
	(article-lapsed-string): Refactor out and allow specifying how many
	segments you want.
	(gnus-article-setup-buffer): Start updating the lapsed header directly.
	(gnus-article-update-lapsed-header): New variable.

	* shr.el: Revert change that made headings use different-sized faces.
	The Emacs display engine isn't advanced enough that, for instance,
	tables can comfortably use differntly-sized faces.

2011-01-25  Lars Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-open-connection-1): Store the actual stream type
	used.
	(nnimap-login): Prefer plain LOGIN if it's enabled (since it requires
	fewer round trips than CRAM-MD5, and it's less likely to be buggy), and
	we're using an encrypted connection.

	* proto-stream.el: Alter the interface functions to also return the
	actual stream type used: network or tls.

2011-01-25  Julien Danjou  <julien@danjou.info>

	* mm-view.el (mm-display-shell-script-inline): Fix typo in docstring.
	(mm-display-javascript-inline): New function.

	* mm-decode.el (mm-inline-media-tests): Add application/javascript
	viewing function.

2011-01-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shr.el (shr-expand-newlines): Fix variable name.

2011-01-25  Lars Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-expand-newlines): Make nested boxes work.
