@@ -1,3 +1,7 @@
+2011-01-27  Glenn Morris  <rgm@gnu.org>
+
+	* gnus-util.el (float-time): Get rid of compiler warning, again.
+
 2011-01-27  Lars Ingebrigtsen  <larsi@gnus.org>
 
 	* gnus-draft.el (gnus-draft-clear-marks): New function to be run as an
